--- a/package.json
+++ b/package.json
@@ -3,23 +3,51 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "webpack-dev-server --env.NODE_ENV=development --open"
+    "start": "webpack-dev-server --env.NODE_ENV=development --open",
+    "type-check": "tsc",
+    "lint": "eslint './**/*.{ts,tsx}'",
+    "fix": "eslint './**/*.{ts,tsx}' --fix"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@swc/cli": "0.1.27",
-    "@swc/core": "1.2.33",
-    "@types/react": "^16.9.49",
-    "@types/react-dom": "^16.9.8",
-    "html-webpack-plugin": "^4.5.0",
-    "swc-loader": "0.1.4",
-    "webpack": "4.29.3",
-    "webpack-cli": "3.2.3",
-    "webpack-dev-server": "3.1.14"
+    "@swc/core": "1.2.34",
+    "@types/jest": "26.0.14",
+    "@types/node": "14.11.2",
+    "@types/react": "16.9.49",
+    "@types/react-dom": "16.9.8",
+    "@types/react-redux": "7.1.9",
+    "@types/redux-mock-store": "1.0.2",
+    "@types/styled-components": "5.1.3",
+    "@typescript-eslint/eslint-plugin": "4.2.0",
+    "@typescript-eslint/parser": "4.2.0",
+    "eslint": "7.9.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-prettier": "3.1.4",
+    "eslint-plugin-react": "7.21.1",
+    "html-webpack-plugin": "4.5.0",
+    "husky": "4.3.0",
+    "lint-staged": "10.4.0",
+    "prettier": "2.1.2",
+    "typescript": "4.0.3",
+    "swc-loader": "0.1.12",
+    "webpack": "4.44.2",
+    "webpack-cli": "3.3.12",
+    "webpack-dev-server": "3.11.0"
   },
   "dependencies": {
     "react": "16.13.1",
     "react-dom": "16.13.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "tsc && lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "npm run fix"
+    ]
   }
 }
