--- a/package.json
+++ b/package.json
@@ -24,19 +24,21 @@
     "@typescript-eslint/parser": "4.2.0",
     "eslint": "7.9.0",
     "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-emotion": "10.0.27",
     "eslint-plugin-prettier": "3.1.4",
     "eslint-plugin-react": "7.21.1",
     "html-webpack-plugin": "4.5.0",
     "husky": "4.3.0",
     "lint-staged": "10.4.0",
     "prettier": "2.1.2",
-    "typescript": "4.0.3",
     "swc-loader": "0.1.12",
+    "typescript": "4.0.3",
     "webpack": "4.44.2",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0"
   },
   "dependencies": {
+    "@emotion/core": "10.0.35",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
