--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "16.9.49",
     "@types/react-dom": "16.9.8",
     "@types/react-redux": "7.1.9",
+    "@types/react-router-dom": "5.1.5",
     "@types/redux-mock-store": "1.0.2",
     "@types/styled-components": "5.1.3",
     "@typescript-eslint/eslint-plugin": "4.2.0",
@@ -40,7 +41,8 @@
   "dependencies": {
     "@emotion/core": "10.0.35",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-router-dom": "5.2.0"
   },
   "husky": {
     "hooks": {
