--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "start": "webpack-dev-server --env.NODE_ENV=development --open",
+    "start": "webpack-dev-server --env.NODE_ENV=development",
     "type-check": "tsc",
     "lint": "eslint './**/*.{ts,tsx}'",
     "fix": "eslint './**/*.{ts,tsx}' --fix"
