--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/styled-components": "5.1.3",
     "@typescript-eslint/eslint-plugin": "4.2.0",
     "@typescript-eslint/parser": "4.2.0",
+    "dotenv-webpack": "^3.0.0",
     "eslint": "7.9.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-emotion": "10.0.27",
@@ -40,6 +41,7 @@
   },
   "dependencies": {
     "@emotion/core": "10.0.35",
+    "firebase": "^7.21.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-router-dom": "5.2.0"
