--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "@emotion/core": "10.0.35",
+    "date-fns": "2.16.1",
     "firebase": "^7.21.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
