--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "firebase": "^7.21.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-router-dom": "5.2.0"
+    "react-router-dom": "5.2.0",
+    "recoil": "0.0.13"
   },
   "husky": {
     "hooks": {
