--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "start": "webpack-dev-server --env.NODE_ENV=development",
     "type-check": "tsc",
     "lint": "eslint './**/*.{ts,tsx}'",
-    "fix": "eslint './**/*.{ts,tsx}' --fix"
+    "fix": "eslint './**/*.{ts,tsx}' --fix",
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@swc/cli": "0.1.27",
     "@swc/core": "1.2.34",
+    "@swc/jest": "0.1.2",
     "@types/jest": "26.0.14",
     "@types/node": "14.11.2",
     "@types/react": "16.9.49",
@@ -23,7 +25,7 @@
     "@types/styled-components": "5.1.3",
     "@typescript-eslint/eslint-plugin": "4.2.0",
     "@typescript-eslint/parser": "4.2.0",
-    "dotenv-webpack": "^3.0.0",
+    "dotenv-webpack": "3.0.0",
     "eslint": "7.9.0",
     "eslint-config-prettier": "6.11.0",
     "eslint-plugin-emotion": "10.0.27",
@@ -31,6 +33,7 @@
     "eslint-plugin-react": "7.21.1",
     "html-webpack-plugin": "4.5.0",
     "husky": "4.3.0",
+    "jest": "26.6.0",
     "lint-staged": "10.4.0",
     "prettier": "2.1.2",
     "swc-loader": "0.1.12",
@@ -42,7 +45,7 @@
   "dependencies": {
     "@emotion/core": "10.0.35",
     "date-fns": "2.16.1",
-    "firebase": "^7.21.1",
+    "firebase": "7.21.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-router-dom": "5.2.0",
@@ -50,7 +53,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "tsc && lint-staged"
+      "pre-commit": "tsc && jest && lint-staged"
     }
   },
   "lint-staged": {
