connect local functions process

--- a/firebase.json
+++ b/firebase.json
@@ -3,11 +3,13 @@
     "predeploy": "npm --prefix \"$RESOURCE_DIR\" run build"
   },
   "hosting": {
+    "predeploy": "npm run build",
     "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
-      "**/node_modules/**"
+      "**/node_modules/**",
+      "src"
     ],
     "rewrites": [
       {
